[package]
name = "azalea-viaversion"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/azalea-rs/azalea-viaversion"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
anyhow = "1.0"
async-compat = "0.2.5"
azalea = { git = "https://github.com/azalea-rs/azalea", default-features = false, features = [
  "online-mode",
] }
futures-util = "0.3"
kdam = "0.6"
lazy-regex = "3.4"
minecraft_folder_path = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "stream",
] }
semver = "1.0"
tokio = { version = "1.47.1", features = ["process"] }
tracing = "0.1"
